# minimalmkdocs

./: .readthedocs.yaml  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: build_and_deploy.yml
docs/: apidocs.md  index.md  quickstart.md
src/: pokedex.py
