[project]
name = "minimalmkdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-material>=9.6.22",
    "mkdocstrings-python>=1.18.2",
]
